Enable java 17 features in preview